[add] UI/UX 개선 (뱃지, 프로필 등)

--- a/front/index.html
+++ b/front/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/gift.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>유엘이의 위시리스트</title>
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0; background: #222;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
