--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/gift.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>유엘이의 위시리스트</title>
+    <meta property="og:url" content="https://wishlist-ul.netlify.app/" />
+    <meta property="og:title" content="유엘이의 위시리시트를 공개합니다" />
+    <meta property="og:description" content="3살 생일 선물을 찜! 해주세요" />
+    <meta property="og:image" content="https://wishlist-ul.netlify.app/assets/profile-BUBiOZ3X.png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="400" />
+    <meta property="og:type" content="website" />
   </head>
   <body style="margin: 0; padding: 0; background: #222;">
     <div id="app"></div>
